--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p> This is a paragraph.</p>
+    <p> This is a 2nd paragraph.</p>
+    <p> This is a 3rd paragraph.</p>
 </body>
 </html>
